[gd_scene load_steps=6 format=3 uid="uid://kmwf6xffbx0h"]

[ext_resource type="Script" uid="uid://clsmx5s06ivob" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="PackedScene" uid="uid://boku43vjbie7" path="res://Assets/neverblink_main_character.glb" id="1_hghv2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1f0kj"]
size = Vector3(2.7598147, 6.678899, 2.3849487)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hghv2"]
radius = 5.38916

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1f0kj"]
height = 3.7631836
radius = 201.81104

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_1f0kj")

[node name="EnemyAsset" parent="." instance=ExtResource("1_hghv2")]
transform = Transform3D(0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, 0.1588515, 0, 0.29903364)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15091062, 3.35953, 0.5568867)
shape = SubResource("BoxShape3D_1f0kj")

[node name="Attack" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack"]
shape = SubResource("CylinderShape3D_hghv2")

[node name="Chase" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chase"]
shape = SubResource("CylinderShape3D_1f0kj")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_attack_body_exited"]
[connection signal="body_entered" from="Chase" to="." method="_on_chase_body_entered"]
[connection signal="body_exited" from="Chase" to="." method="_on_chase_body_exited"]
